@@ -4,6 +4,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.Comparator;
 import java.util.List;
@@ -12,27 +13,28 @@ import java.util.stream.Collectors;
 
 @Controller
 @AllArgsConstructor
-class SkillMatrixController {
+class SkillSetsController {
 
     private final SkillRepository skillRepository;
 
     private final DeveloperRepository developerRepository;
 
-    @GetMapping("/skills/matrix")
-    public String skillMatrix(Model model) {
-        final List<Skill> skills = getAllSkillsRanked();
+    @GetMapping("/skills/sets")
+    public String skillSets(@RequestParam(required = false) String query, Model model) {
+        final List<Skill> skills = sortSkills(getSkills(query));
 
-        final Set<Integer> developerIds = getDeveloperIds();
+        final Set<Integer> developerIds = getDeveloperIds(skills);
 
         skills.forEach(skill -> {
             addEmptyExperienceForMissingDevelopers(skill, developerIds);
 
-            // sort all experiences again by developer weight descending
-            skill.getExperiences().sort(Comparator.comparing(o -> -o.getDeveloper().getWeight()));
+            // sort all experiences again by developer weight of selected skills descending
+            skill.getExperiences().sort(Comparator.comparing(o -> -o.getDeveloper().getWeightForSkills(skills)));
         });
 
         model.addAttribute("skills", skills);
-        return "/skills/skillMatrix";
+        model.addAttribute("query", query);
+        return "/skills/skillSets";
     }
 
     private void addEmptyExperienceForMissingDevelopers(Skill skill, Set<Integer> devIdsOfSkills) {
@@ -45,11 +47,11 @@ class SkillMatrixController {
         });
     }
 
-    private List<Integer> findIdsOfMissingDevs(Set<Integer> idsOfAllDevelopers, List<Experience> experiences) {
+    private List<Integer> findIdsOfMissingDevs(Set<Integer> idsOfDevelopers, List<Experience> experiences) {
         final List<Integer> idsOfDevelopersWithThisSkill = experiences.stream()
                 .map(exp -> exp.getDeveloper().getDeveloperId())
                 .toList();
-        return idsOfAllDevelopers.stream()
+        return idsOfDevelopers.stream()
                 .filter(id -> !idsOfDevelopersWithThisSkill.contains(id))
                 .toList();
     }
@@ -62,20 +64,25 @@ class SkillMatrixController {
         return e;
     }
 
-    private List<Skill> getAllSkillsRanked() {
+    private List<Skill> getSkills(String query) {
+        return query == null ?
+                skillRepository.findAll() :
+                skillRepository.findByQuery(query.toUpperCase());
+    }
+
+    private List<Skill> sortSkills(List<Skill> skills) {
         Comparator<Skill> skillWeightComp = Comparator.comparing(HasExperiences::getWeight);
         Comparator<Skill> skillNameComp = Comparator.comparing(Skill::getName);
 
-        return skillRepository.findAll()
-                .stream()
+        return skills.stream()
                 .sorted(skillWeightComp.reversed().thenComparing(skillNameComp))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Set<Integer> getDeveloperIds() {
-        return developerRepository.findAll()
-                .stream()
-                .map(Developer::getDeveloperId)
+    public Set<Integer> getDeveloperIds(List<Skill> skills) {
+        return skills.stream()
+                .flatMap(s -> s.getExperiences().stream()
+                        .map(exp -> exp.getDeveloper().getDeveloperId()))
                 .collect(Collectors.toSet());
     }
 }
